# king-hunter

./: Cargo.toml  Dockerfile  LICENSE  README.md
config/: settings.toml
gui/src/: App.css  App.tsx
src/: main.rs  update.rs
src/license/: validator.rs
