[package]
name = "king-hunter"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3"
dirs-next = "2.0"
aes-gcm = "0.10"
log4rs = "1.0"
notify-rs = "0.3"
clap = { version = "4.0", features = ["derive"] }
tungstenite = "0.18"
chrono = "0.4"
semver = "1.0"
base64 = "0.13"
serde_json = "1.0"
